--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
 		    <id>jitpack.io</id>
 		    <url>https://jitpack.io</url>
 		</repository>
+		<repository>
+			<id>placeholderapi-repo</id>
+            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
     </repositories>
 	<build>
         <finalName>${project.name} v${project.version}</finalName>
@@ -63,5 +67,11 @@
         	<version>1.7</version>
         	<scope>provided</scope>
     	</dependency>
+	    <dependency>
+	    	<groupId>me.clip</groupId>
+          	<artifactId>placeholderapi</artifactId>
+          	<version>2.10.2</version>
+         	<scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
