--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,8 @@
             <version>1.14.2-R0.1-SNAPSHOT</version>
         </dependency>
 		<dependency>
-      		<groupId>io.github.thebusybiscuit</groupId>
-      		<artifactId>CSCoreLib2</artifactId>
+      		<groupId>com.github.thebusybiscuit</groupId>
+      		<artifactId>CS-CoreLib2</artifactId>
       		<version>0.2.1</version>
     	</dependency>
     	<dependency>
