--- a/pom.xml
+++ b/pom.xml
@@ -7,119 +7,120 @@
   <version>1.7.1</version>
   
   <properties>
-	<maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	  <maven.compiler.source>1.8</maven.compiler.source>
+	  <maven.compiler.target>1.8</maven.compiler.target>
+	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
   <repositories>
     	<repository>
-    		<id>paper-repo</id>
-            <url>https://repo.destroystokyo.com/repository/maven-public/</url>
+		<id>paper-repo</id>
+            	<url>https://repo.destroystokyo.com/repository/maven-public/</url>
         </repository>
         <repository>
-            <id>spigot-repo</id> 
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url> 
+            	<id>spigot-repo</id> 
+            	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url> 
         </repository>
 		<repository>
-		    <id>jitpack.io</id>
-		    <url>https://jitpack.io</url>
+			<id>jitpack.io</id>
+		    	<url>https://jitpack.io</url>
 		</repository>
 		<repository>
 			<id>placeholderapi-repo</id>
-            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
-        </repository>
-        <repository>
+            		<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        	</repository>
+        	<repository>
   			<id>CodeMC</id>
   			<url>https://repo.codemc.org/repository/maven-public</url>
 		</repository>
-    </repositories>
+    	</repositories>
 	<build>
-        <finalName>${project.name} v${project.version}</finalName>
-        <sourceDirectory>${project.basedir}/src</sourceDirectory>
-        <testSourceDirectory>${project.basedir}/tests/java</testSourceDirectory>
-        <testResources>
-        	<testResource>
-            	<directory>${project.basedir}/tests/resources</directory>
-          	</testResource>
-        </testResources>
-        <resources>
-            <resource>
-            	<directory>${basedir}/src</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>config.yml</include>
-                    <include>plugin.yml</include>
-                </includes>
-            </resource>
-        </resources>	
-        
-        <plugins>
-      		<plugin>
-        		<groupId>org.apache.maven.plugins</groupId>
-        		<artifactId>maven-shade-plugin</artifactId>
-        		<version>3.2.1</version>
+		<finalName>${project.name} v${project.version}</finalName>
+		<sourceDirectory>${project.basedir}/src</sourceDirectory>
+		<testSourceDirectory>${project.basedir}/tests/java</testSourceDirectory>
+		<testResources>
+			<testResource>
+			<directory>${project.basedir}/tests/resources</directory>
+			</testResource>
+		</testResources>
+		<resources>
+		    <resource>
+			<directory>${basedir}/src</directory>
+			<filtering>true</filtering>
+			<includes>
+			    <include>config.yml</include>
+			    <include>plugin.yml</include>
+			</includes>
+		    </resource>
+		</resources>	
 
-        		<configuration>
-        			<filters>
-        				<filter>
-        					<artifact>com.github.thebusybiscuit:CS-CoreLib2</artifact>
-        					<includes>
-        						<include>**/cscorelib2/config/**</include>
-        						<include>**/cscorelib2/updater/**</include>
-                        	</includes>
-                    	</filter>
-                    </filters>
-          			<relocations>
-            			<relocation>
-              				<pattern>io.github.thebusybiscuit.cscorelib2</pattern>
-              				<shadedPattern>me.mrCookieSlime.CommandOverride.cscorelib2</shadedPattern>
-            			</relocation>
-            			<relocation>
-            				<pattern>org.bstats</pattern>
-            				<shadedPattern>me.mrCookieSlime.CommandOverride.bstats</shadedPattern>
-          				</relocation>
-          			</relocations>
-        		</configuration>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.1</version>
 
-        		<executions>
-          			<execution>
-            			<phase>package</phase>
-            			<goals>
-              				<goal>shade</goal>
-            			</goals>
-          			</execution>
-        		</executions>
-      		</plugin>
-		</plugins>	
+				<configuration>
+					<filters>
+						<filter>
+							<artifact>com.github.thebusybiscuit:CS-CoreLib2</artifact>
+							<includes>
+								<include>**/thebusybiscuit/cscorelib2/config/**</include>
+								<include>**/thebusybiscuit/cscorelib2/updater/**</include>
+							</includes>
+						</filter>
+			    		</filters>
+					
+					<relocations>
+						<relocation>
+							<pattern>io.github.thebusybiscuit.cscorelib2</pattern>
+							<shadedPattern>me.mrCookieSlime.CommandOverride.cscorelib2</shadedPattern>
+						</relocation>
+						<relocation>
+							<pattern>org.bstats</pattern>
+							<shadedPattern>me.mrCookieSlime.CommandOverride.bstats</shadedPattern>
+						</relocation>
+					</relocations>
+				</configuration>
+
+				<executions>
+					<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>shade</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>	
     </build>
     
     <dependencies>
         <dependency>
            	<groupId>org.bukkit</groupId>
            	<artifactId>bukkit</artifactId>
-            <version>1.14.2-R0.1-SNAPSHOT</version>
+            	<version>1.14.2-R0.1-SNAPSHOT</version>
          	<scope>provided</scope>
         </dependency>
-		<dependency>
+	<dependency>
       		<groupId>com.github.thebusybiscuit</groupId>
       		<artifactId>CS-CoreLib2</artifactId>
-      		<version>0.2.1</version>
+      		<version>0.3.1</version>
          	<scope>compile</scope>
     	</dependency>
     	<dependency>
-  			<groupId>org.bstats</groupId>
-  			<artifactId>bstats-bukkit</artifactId>
-  			<version>1.5</version>
-  			<scope>compile</scope>
-		</dependency>
-	    <dependency>
+  		<groupId>org.bstats</groupId>
+  		<artifactId>bstats-bukkit</artifactId>
+  		<version>1.5</version>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
         	<groupId>com.github.MilkBowl</groupId>
         	<artifactId>VaultAPI</artifactId>
         	<version>1.7</version>
         	<scope>provided</scope>
     	</dependency>
-	    <dependency>
+	<dependency>
 	    	<groupId>me.clip</groupId>
           	<artifactId>placeholderapi</artifactId>
           	<version>2.10.2</version>
