--- a/pom.xml
+++ b/pom.xml
@@ -1,48 +1,51 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>me.mrCookieSlime</groupId>
-  <artifactId>CommandOverride</artifactId>
-  <version>1.7.1</version>
+  	<groupId>io.github.thebusybiscuit</groupId>
+  	<artifactId>CommandOverride</artifactId>
+  	<version>1.8</version>
   
-  <properties>
-	  <maven.compiler.source>1.8</maven.compiler.source>
-	  <maven.compiler.target>1.8</maven.compiler.target>
-	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	  	<maven.compiler.target>1.8</maven.compiler.target>
+	  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  	</properties>
   
-  <repositories>
+  	<repositories>
     	<repository>
-		<id>paper-repo</id>
-            	<url>https://repo.destroystokyo.com/repository/maven-public/</url>
+			<id>paper-repo</id>
+            <url>https://repo.destroystokyo.com/repository/maven-public/</url>
         </repository>
         <repository>
-            	<id>spigot-repo</id> 
-            	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url> 
+            <id>spigot-repo</id> 
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url> 
         </repository>
 		<repository>
 			<id>jitpack.io</id>
-		    	<url>https://jitpack.io</url>
+		    <url>https://jitpack.io</url>
 		</repository>
 		<repository>
 			<id>placeholderapi-repo</id>
-            		<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
-        	</repository>
-        	<repository>
+            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+        <repository>
   			<id>CodeMC</id>
   			<url>https://repo.codemc.org/repository/maven-public</url>
 		</repository>
-    	</repositories>
+	</repositories>
+	
 	<build>
 		<finalName>${project.name} v${project.version}</finalName>
 		<sourceDirectory>${project.basedir}/src</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/tests/java</testSourceDirectory>
+		
 		<testResources>
 			<testResource>
-			<directory>${project.basedir}/tests/resources</directory>
+				<directory>${project.basedir}/tests/resources</directory>
 			</testResource>
 		</testResources>
+		
 		<resources>
 		    <resource>
 			<directory>${basedir}/src</directory>
@@ -74,11 +77,11 @@
 					<relocations>
 						<relocation>
 							<pattern>io.github.thebusybiscuit.cscorelib2</pattern>
-							<shadedPattern>me.mrCookieSlime.CommandOverride.cscorelib2</shadedPattern>
+							<shadedPattern>io.github.thebusybiscuit.commandoverride.cscorelib2</shadedPattern>
 						</relocation>
 						<relocation>
 							<pattern>org.bstats</pattern>
-							<shadedPattern>me.mrCookieSlime.CommandOverride.bstats</shadedPattern>
+							<shadedPattern>io.github.thebusybiscuit.commandoverride.bstats</shadedPattern>
 						</relocation>
 					</relocations>
 				</configuration>
@@ -95,32 +98,32 @@
 	</plugins>	
     </build>
     
-    <dependencies>
-        <dependency>
+	<dependencies>
+		<dependency>
            	<groupId>org.bukkit</groupId>
            	<artifactId>bukkit</artifactId>
-            	<version>1.14.2-R0.1-SNAPSHOT</version>
+            <version>1.14.2-R0.1-SNAPSHOT</version>
          	<scope>provided</scope>
         </dependency>
-	<dependency>
+		<dependency>
       		<groupId>com.github.thebusybiscuit</groupId>
       		<artifactId>CS-CoreLib2</artifactId>
       		<version>0.3.1</version>
          	<scope>compile</scope>
     	</dependency>
     	<dependency>
-  		<groupId>org.bstats</groupId>
-  		<artifactId>bstats-bukkit</artifactId>
-  		<version>1.5</version>
-		<scope>compile</scope>
-	</dependency>
-	<dependency>
+  			<groupId>org.bstats</groupId>
+  			<artifactId>bstats-bukkit</artifactId>
+  			<version>1.5</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
         	<groupId>com.github.MilkBowl</groupId>
         	<artifactId>VaultAPI</artifactId>
         	<version>1.7</version>
         	<scope>provided</scope>
     	</dependency>
-	<dependency>
+		<dependency>
 	    	<groupId>me.clip</groupId>
           	<artifactId>placeholderapi</artifactId>
           	<version>2.10.2</version>
